qmsystem2 (1.0.9) unstable; urgency=low

  [Tapio Rantala]
  * Don't say Off to displaystate when mce doesn't say it
  * Fixes: NB#225378 - MeeGo::QmDisplayState() emits wrong state for display

 -- Tapio Rantala <ext-tapio.rantala@nokia.com>  Mon, 07 Feb 2011 10:08:07 +0200

qmsystem2 (1.0.8) unstable; urgency=low

  [Yang Yang]
  * Add test displayStateChanged signal to manual-displaystate-test, and rotate to manual-orientation-test

  [Matias Muhonen]
   * Mark deprecated methods with the @deprecated annotation
   * Fixes: NB#225060 - QmSystem still generates documentation packages when the DEB_BUILD_OPTIONS "nodocs" is given

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Wed, 2 Feb 2011 13:37:19 +0200

qmsystem2 (1.0.7) unstable; urgency=low

   [Yang Yang]
   * Add mountStatus and fileSystemWillUnmount test to manual-usb-test

   [Matias Muhonen]
   * Fixes: NB#221794 - QT API (QmUSBMode) should support new signals and provide "Mount" status
   * Bump copyright year
   * Depend on mce in the default build configuration

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 28 Jan 2011 09:23:03 +0200

qmsystem2 (1.0.6) unstable; urgency=low

   [Matias Muhonen]
   * Fixes: NB#218103 - qmsystem classes shouldn't connect to dbus signals in constructors

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 19 Jan 2011 10:01:26 +0200

qmsystem2 (1.0.5) unstable; urgency=low

   [Yang Yang]
   * Add power key test to manual-key-test

   [Matias Muhonen]
   * Fixes: NB#218465 - Activate offline mode shown in offline mode
   * Fixes: NB#218788 - QmKeys does not inform clients about power key presses
   * Put back devicelock functionality without the devicelock dependency

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 14 Jan 2011 13:16:02 +0200

qmsystem2 (1.0.4) unstable; urgency=low

   [Antti Virtanen]
   * Compatible with sensord-0.6.33.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Wed, 29 Dec 2010 14:44:18 +0200
