@@ -4,6 +4,9 @@ qmsystem2 (1.0.9) unstable; urgency=low
   * Don't say Off to displaystate when mce doesn't say it
   * Fixes: NB#225378 - MeeGo::QmDisplayState() emits wrong state for display
 
+  [Matias Muhonen]
+  * Optimize the D-Bus calls in QmDisplayState
+
  -- Tapio Rantala <ext-tapio.rantala@nokia.com>  Mon, 07 Feb 2011 10:08:07 +0200
 
 qmsystem2 (1.0.8) unstable; urgency=low
